--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -27,7 +27,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/name"
+            android:id="@+id/email"
             style="@style/TextInputET"
             android:hint="email"
             android:inputType="textPersonName"
@@ -47,6 +47,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/password"
             style="@style/TextInputET"
+            android:inputType="textPassword"
             android:hint="password" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -56,13 +57,12 @@
         android:text="submit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-
         app:layout_constraintTop_toBottomOf="@id/password_layout" />
 
     <Button
         android:id="@+id/register_button"
         style="@style/ButtonStyle"
-        android:text="resister"
+        android:text="register"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/login_button" />
