--- a/app/src/main/res/layout/register_fragment.xml
+++ b/app/src/main/res/layout/register_fragment.xml
@@ -19,6 +19,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/email_et"
             style="@style/TextInputET" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -55,6 +56,7 @@
         app:layout_constraintTop_toBottomOf="@id/last_name_layout">
 
         <com.google.android.material.textfield.TextInputEditText
+           android:id="@+id/password_et"
             style="@style/TextInputET" />
     </com.google.android.material.textfield.TextInputLayout>
 
